--- a/interactivemap.cfg
+++ b/interactivemap.cfg
@@ -23,6 +23,7 @@ OpenLayers/Feature/Vector.js
 OpenLayers/Geometry/Point.js
 OpenLayers/Geometry/Polygon.js
 OpenLayers/Geometry/LinearRing.js
+OpenLayers/Geometry/MultiPolygon.js
 OpenLayers/Handler/Click.js
 OpenLayers/Handler/Point.js
 OpenLayers/Handler/Polygon.js
