--- a/interactivemap.cfg
+++ b/interactivemap.cfg
@@ -32,7 +32,7 @@ OpenLayers/Layer/Vector.js
 OpenLayers/Popup/FramedCloud.js
 OpenLayers/Renderer/SVG.js
 OpenLayers/Renderer/Canvas.js
-OpenLayers/Format/KML.js
+OpenLayers/Format/WKT.js
 OpenLayers/Protocol/HTTP.js
 OpenLayers/Strategy/Fixed.js
 OpenLayers/TileManager.js
