--- a/interactivemap.cfg
+++ b/interactivemap.cfg
@@ -33,6 +33,7 @@ OpenLayers/Popup/FramedCloud.js
 OpenLayers/Renderer/SVG.js
 OpenLayers/Renderer/Canvas.js
 OpenLayers/Protocol/HTTP.js
+OpenLayers/Format/GeoJSON.js
 OpenLayers/Strategy/Fixed.js
 OpenLayers/TileManager.js
 
