update vision library

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "copy:data": "cp node_modules/dota-vision-simulation/src/worlddata.json src",
     "clean:build": "rm -rf build/*",
     "build:js": "cat ol2/build/OpenLayers.js www/bundle.js | uglifyjs --compress drop_console,dead_code --mangle > build/bundle.min.js",
-    "build:img": "imagemin www/img/* --out-dir=build/img",
+    "build:img": "imagemin www/img/* --out-dir=build/img && cp www/img/map_data.png build/img/",
     "build:css": "cat www/openlayers.css www/interactivemap.css | cleancss --skip-rebase -o build/app.min.css",
     "build:html": "NODE_ENV=prod node scripts/preprocess.js",
     "build:copy": "cp -r www/data build/",
@@ -40,7 +40,7 @@
     "browserify": "^13.1.1",
     "clean-css": "^3.4.22",
     "del": "^2.2.2",
-    "dota-vision-simulation": "^0.13.0",
+    "dota-vision-simulation": "^0.13.1",
     "git-rev-sync": "^1.8.0",
     "glob": "^7.1.1",
     "imagemin-cli": "^3.0.0",
