--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "browserify": "browserify src/app.js --standalone InteractiveMap > www/bundle.js",
     "ol:prod": "node scripts/build_ol.js -- closure",
-    "ol:dev": "node scripts/build_ol.js",
+    "ol:dev": "node scripts/build_ol.js && npm run browserify",
     "copy:img": "cp node_modules/dota-vision-simulation/www/map_data.png www/img",
     "copy:data": "cp node_modules/dota-vision-simulation/src/worlddata.json src",
     "clean:build": "rm -rf build/*",
