--- a/package.json
+++ b/package.json
@@ -4,22 +4,26 @@
   "description": "Interactive Dota 2 Map",
   "main": "interactivemap.js",
   "scripts": {
-    "browserify": "browserify src/app.js --standalone InteractiveMap > www/bundle.js",
+    "browserify:dev": "node scripts/browserify.js",
+    "browserify:prod": "node scripts/browserify.js -- production",
     "ol:prod": "node scripts/build_ol.js -- closure",
     "ol:dev": "node scripts/build_ol.js && npm run browserify",
     "copy:img": "cp node_modules/dota-vision-simulation/www/map_data.png www/img",
     "copy:data": "cp node_modules/dota-vision-simulation/src/worlddata.json src",
     "clean:build": "rm -rf build/*",
-    "build:js": "npm run browserify && cat src/OpenLayers.js www/bundle.js > build/bundle.js && uglifyjs --source-map build/bundle.min.js.map --source-map-url bundle.min.js.map --source-map-root . -p 1 --compress drop_console,dead_code --mangle -- build/bundle.js > build/bundle.min.js",
+    "build:js": "npm run browserify:prod && cat src/OpenLayers.js build/temp.js > build/bundle.js && uglifyjs --source-map build/bundle.min.js.map --source-map-url bundle.min.js.map --source-map-root . -p 1 --compress drop_console,dead_code --mangle -- build/bundle.js > build/bundle.min.js",
     "build:img": "imagemin www/img/* --out-dir=build/img && cp www/img/map_data.png build/img/",
     "build:css": "cat www/openlayers.css www/interactivemap.css | cleancss --skip-rebase -o build/app.min.css",
     "build:html": "NODE_ENV=prod node scripts/preprocess.js",
     "build:copy": "cp -r www/data build/",
     "build": "npm run clean:build && npm run build:js && npm run build:img && npm run build:css && npm run build:html && npm run build:copy",
+    "rollbar:sourcemap": "gulp rollbar:sourcemap",
+    "rollbar:deploy:dev": "NODE_ENV=dev node scripts/rollbar_deploy.js",
+    "rollbar:deploy:prod": "NODE_ENV=prod node scripts/rollbar_deploy.js",
     "stage:rev": "node scripts/rev.js",
     "stage": "npm run build && npm run stage:rev",
     "deploy:copy": "node scripts/deploy.js",
-    "deploy": "npm run stage && npm run deploy:copy",
+    "deploy": "npm run stage && npm run rollbar:sourcemap && npm run deploy:copy && npm run rollbar:deploy:prod",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -39,14 +43,19 @@
   "devDependencies": {
     "@turf/union": "^3.7.0",
     "browserify": "^13.1.1",
+    "browserify-replace": "^0.9.0",
     "clean-css": "^3.4.22",
     "del": "^2.2.2",
     "dota-vision-simulation": "^0.13.2",
     "git-rev-sync": "^1.8.0",
     "glob": "^7.1.1",
+    "gulp": "^3.9.1",
+    "gulp-rollbar": "^0.1.4",
+    "gulp-sourcemaps": "^1.9.1",
     "imagemin-cli": "^3.0.0",
     "preprocess": "^3.1.0",
     "replace": "^0.3.0",
+    "rollbar-browser": "^1.9.2",
     "uglify-js": "^2.7.5"
   }
 }
