--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "browserify:dev": "node scripts/browserify.js",
     "browserify:prod": "node scripts/browserify.js -- production",
     "ol:prod": "node scripts/build_ol.js -- closure",
-    "ol:dev": "node scripts/build_ol.js && npm run browserify",
+    "ol:dev": "node scripts/build_ol.js && npm run browserify:dev",
     "copy:img": "cp node_modules/dota-vision-simulation/www/map_data.png www/img",
     "copy:data": "cp node_modules/dota-vision-simulation/src/worlddata.json src",
     "clean:build": "rm -rf build/*",
