--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "build:img": "imagemin www/img/* --out-dir=build/img && cp www/img/map_data.png build/img/",
     "build:css": "cat www/openlayers.css www/interactivemap.css | cleancss --skip-rebase -o build/app.min.css",
     "build:html": "NODE_ENV=prod node scripts/preprocess.js",
-    "build:copy": "cp -r www/data build/",
-    "build": "npm run clean:build && npm run build:js && npm run build:img && npm run build:css && npm run build:html && npm run build:copy",
+    "build:copy": "cp -r www/data build/ && cp -r www/img build/",
+    "build": "npm run clean:build && npm run build:js && npm run build:copy && npm run build:img && npm run build:css && npm run build:html",
     "rollbar:sourcemap": "gulp rollbar:sourcemap",
     "rollbar:deploy:dev": "NODE_ENV=dev node scripts/rollbar_deploy.js",
     "rollbar:deploy:prod": "NODE_ENV=prod node scripts/rollbar_deploy.js",
