--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "homepage": "https://github.com/devilesk/dota-interactive-map#readme",
   "devDependencies": {
+    "@turf/bezier": "^3.7.0",
     "@turf/union": "^3.7.0",
     "browserify": "^13.1.1",
     "browserify-replace": "^0.9.0",
