--- a/package.json
+++ b/package.json
@@ -4,29 +4,10 @@
   "description": "Interactive Dota 2 Map",
   "main": "interactivemap.js",
   "scripts": {
-    "browserify:dev": "node scripts/browserify.js",
-    "browserify:prod": "node scripts/browserify.js -- production",
-    "ol:prod": "node scripts/build_ol.js -- closure",
-    "ol:dev": "node scripts/build_ol.js && npm run browserify:dev",
-    "copy:img": "cp node_modules/dota-vision-simulation/www/map_data.png www/img",
-    "copy:data": "cp node_modules/dota-vision-simulation/src/worlddata.json src",
-    "clean:build": "rm -rf build/*",
-    "build:js": "npm run browserify:prod && cat src/OpenLayers.js build/temp.js > build/bundle.js && uglifyjs --source-map build/bundle.min.js.map --source-map-url bundle.min.js.map --source-map-root . -p 1 --compress drop_console,dead_code --mangle -- build/bundle.js > build/bundle.min.js",
-    "build:img": "imagemin www/img/* --out-dir=build/img && cp www/img/map_data.png build/img/",
-    "build:css": "cat www/openlayers.css www/interactivemap.css | cleancss --skip-rebase -o build/app.min.css",
-    "build:html": "NODE_ENV=prod node scripts/preprocess.js",
-    "build:copy": "cp -r www/data build/ && cp -r www/img build/",
-    "build": "npm run clean:build && npm run build:js && npm run build:copy && npm run build:img && npm run build:css && npm run build:html",
-    "rollbar:sourcemap": "gulp rollbar:sourcemap",
-    "rollbar:deploy:dev": "NODE_ENV=dev node scripts/rollbar_deploy.js",
-    "rollbar:deploy:prod": "NODE_ENV=prod node scripts/rollbar_deploy.js",
-    "stage:rev": "node scripts/rev.js",
-    "stage": "npm run ol:prod && npm run build && npm run stage:rev",
-    "deploy:copy": "node scripts/deploy.js",
-    "deploy": "npm run stage && npm run rollbar:sourcemap && npm run deploy:copy && npm run rollbar:deploy:prod",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build:ol3": "browserify -u openlayers src/index.js > www/bundle.js",
-    "start": "watchify src/index.js --outfile www/bundle.js"
+    "watch:js": "watchify src/js/index.js --outfile www/bundle.js",
+    "build:css" : "node-sass src/scss/app.scss www/app.css",
+    "watch:css": "nodemon -e scss -x \"npm run build:css\"",
+    "watch": "npm run watch:js & npm run watch:css"
   },
   "keywords": [
     "dota",
@@ -57,6 +38,8 @@
     "gulp-rollbar": "^0.1.4",
     "gulp-sourcemaps": "^1.9.1",
     "imagemin-cli": "^3.0.0",
+    "node-sass": "^4.1.1",
+    "nodemon": "^1.11.0",
     "ol3-popup": "0.0.1-security",
     "openlayers": "^3.20.1",
     "preprocess": "^3.1.0",
