--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "uglify": "node scripts/uglify.js",
     "sass": "node-sass src/scss/app.scss www/app.css",
     "openlayers": "node node_modules/openlayers/tasks/build.js src/ol-custom.json src/js/lib/ol-custom.js",
+    "markdown:help": "marked src/help.md -o www/help.html",
     "clean:build": "rm -rf build/*",
     "clean:dist": "rm -rf dist/*",
     "clean": "npm run clean:build && npm run clean:dist",
     "build:js": "npm run browserify -- production && npm run uglify",
     "build:css": "npm run sass && cleancss www/app.css --skip-rebase -o build/app-`git rev-parse --short HEAD`.min.css",
-    "build:html": "node scripts/preprocess.js -- production",
+    "build:html": "npm run markdown:help && node scripts/preprocess.js -- production",
     "build:copy": "cp -r www/img build/img && cp -r www/data build/data",
     "build": "npm run clean:build && npm run build:js && npm run build:css && npm run build:html && npm run build:copy",
     "watch:js": "node scripts/browserify.js -- development watch",
@@ -55,6 +56,7 @@
     "gulp-rollbar": "^0.1.4",
     "gulp-sourcemaps": "^1.9.1",
     "imagemin-cli": "^3.0.0",
+    "marked": "^0.3.6",
     "node-sass": "^4.1.1",
     "nodemon": "^1.11.0",
     "openlayers": "^3.20.1",
