--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "sass": "node-sass src/scss/app.scss www/app.css",
     "openlayers": "node node_modules/openlayers/tasks/build.js src/ol-custom.json src/js/lib/ol-custom.js",
     "markdown:help": "marked src/help.md -o www/help.html",
+    "preprocess:html": "npm run markdown:help && node scripts/preprocess.js",
     "clean:build": "rm -rf build/*",
     "clean:dist": "rm -rf dist/*",
     "clean": "npm run clean:build && npm run clean:dist",
@@ -19,7 +20,8 @@
     "build": "npm run clean:build && npm run build:js && npm run build:css && npm run build:html && npm run build:copy",
     "watch:js": "node scripts/browserify.js -- development watch",
     "watch:css": "nodemon -e scss --watch src/scss -x \"npm run build:css\"",
-    "watch": "npm run watch:js & npm run watch:css",
+    "watch:html": "nodemon -e html,md --watch src -x \"npm run preprocess:html\"",
+    "watch": "npm run watch:js & npm run watch:css & npm run watch:html",
     "rollbar:sourcemap": "gulp rollbar:sourcemap",
     "rollbar:deploy": "node scripts/rollbar_deploy.js",
     "rollbar": "npm run rollbar:sourcemap && npm run rollbar:deploy -- production",
