--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "stage": "npm run ol:prod && npm run build && npm run stage:rev",
     "deploy:copy": "node scripts/deploy.js",
     "deploy": "npm run stage && npm run rollbar:sourcemap && npm run deploy:copy && npm run rollbar:deploy:prod",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "render": "python scripts/render.py"
   },
   "keywords": [
     "dota",
