--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "openlayers": "node node_modules/openlayers/tasks/build.js src/ol-custom.json src/js/lib/ol-custom.js",
     "markdown:help": "marked src/help.md -o www/help.html",
     "preprocess:html": "npm run markdown:help && node scripts/preprocess.js",
-    "clean:build": "rm -rf build/*",
+    "clean:build": "rm -rf dist/*",
     "clean:dist": "rm -rf dist/*",
     "clean": "npm run clean:build && npm run clean:dist",
     "build:js": "npm run browserify -- production && npm run uglify",
-    "build:css": "npm run sass && cleancss www/app.css --skip-rebase -o build/app-`git rev-parse --short HEAD`.min.css",
+    "build:css": "npm run sass && cleancss www/app.css --skip-rebase -o dist/app-`git rev-parse --short HEAD`.min.css",
     "build:html": "npm run markdown:help && node scripts/preprocess.js -- production",
-    "build:copy": "cp -r www/img build/img && cp -r www/data build/data",
+    "build:copy": "cp -r www/img dist/img && cp -r www/data dist/data",
     "build": "npm run clean:build && npm run build:js && npm run build:css && npm run build:html && npm run build:copy",
     "watch:js": "node scripts/browserify.js -- development watch",
     "watch:css": "nodemon -e scss --watch src/scss -x \"npm run sass\"",
