--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/js/index.js",
   "private": true,
   "scripts": {
+    "postinstall": "npm run build",
     "browserify": "node scripts/browserify.js",
     "uglify": "node scripts/uglify.js",
     "sass": "node-sass src/scss/app.scss www/app.css",
@@ -16,7 +17,7 @@
     "build:css": "npm run sass && cleancss www/app.css --skip-rebase -o dist/app-`git rev-parse --short HEAD`.min.css",
     "build:html": "npm run render && npm run markdown:help && node scripts/preprocess.js -- production",
     "build:copy": "cp -r www/img dist/img && cp -r www/data dist/data",
-    "build": "npm run clean && npm run build:js && npm run build:css && npm run build:html && npm run build:copy",
+    "build": "mkdir -p dist && npm run clean && npm run build:js && npm run build:css && npm run build:html && npm run build:copy",
     "watch:js": "node scripts/browserify.js -- development watch",
     "watch:css": "nodemon -e scss --watch src/scss -x \"npm run sass\"",
     "watch:html": "nodemon -e html,md --watch src -x \"npm run preprocess:html\"",
