--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "browserify": "node scripts/browserify.js",
     "uglify": "node scripts/uglify.js",
     "sass": "node-sass src/scss/app.scss www/app.css",
-    "openlayers": "node node_modules/openlayers/tasks/build.js src/ol-custom.json src/js/lib/ol-custom.js",
     "markdown:help": "marked src/help.md -o www/help.html",
     "preprocess:html": "npm run markdown:help && node scripts/preprocess.js",
     "clean": "rm -rf dist/*",
@@ -40,6 +39,8 @@
   },
   "homepage": "https://github.com/devilesk/dota-interactive-map#readme",
   "devDependencies": {
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
+    "babelify": "^7.3.0",
     "browserify": "^13.1.1",
     "browserify-replace": "^0.9.0",
     "browserify-shim": "^3.8.12",
@@ -57,17 +58,17 @@
     "nodemon": "^1.11.0",
     "preprocess": "^3.1.0",
     "replace": "^0.3.0",
+    "rollup-plugin-commonjs": "^8.0.2",
+    "rollup-plugin-node-resolve": "^3.0.0",
+    "rollupify": "^0.3.9",
     "uglify-js": "^2.7.5",
     "watchify": "^3.8.0"
   },
   "dependencies": {
-    "dota-vision-simulation": "^0.14.4",
-    "openlayers": "^3.20.1",
-    "rollbar-browser": "^1.9.2",
     "@turf/bezier": "^3.7.0",
-    "@turf/union": "^3.7.0"
-  },
-  "browser": {
-    "openlayers": "./src/js/lib/ol-custom.js"
+    "@turf/union": "^3.7.0",
+    "dota-vision-simulation": "^0.14.4",
+    "ol": "^4.1.1",
+    "rollbar-browser": "^1.9.2"
   }
 }
