add template render watch script

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "watch:js": "node scripts/browserify.js -- development watch",
     "watch:css": "nodemon -e scss --watch src/scss -x \"npm run sass\"",
     "watch:html": "nodemon -e html,md --watch src -x \"npm run preprocess:html\"",
-    "watch": "npm run watch:js & npm run watch:css & npm run watch:html",
+    "watch:j2": "nodemon -e j2 --watch src -x \"npm run render\"",
+    "watch": "npm run watch:js & npm run watch:css & npm run watch:j2 & npm run watch:html",
     "rollbar:sourcemap": "gulp rollbar:sourcemap",
     "rollbar:deploy": "node scripts/rollbar_deploy.js",
     "rollbar": "npm run rollbar:sourcemap && npm run rollbar:deploy -- production",
