--- a/package.json
+++ b/package.json
@@ -43,18 +43,18 @@
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
-    "babelify": "^7.3.0",
-    "browserify": "^13.1.1",
+    "babelify": "^8.0.0",
+    "browserify": "^14.5.0",
     "browserify-replace": "^0.9.0",
     "browserify-shim": "^3.8.12",
-    "clean-css": "^3.4.28",
-    "del": "^2.2.2",
-    "exorcist": "^0.4.0",
+    "clean-css": "^4.1.9",
+    "del": "^3.0.0",
+    "exorcist": "^1.0.0",
     "git-rev-sync": "^1.8.0",
     "glob": "^7.1.1",
     "gulp": "^3.9.1",
     "gulp-rollbar": "^0.1.4",
-    "gulp-sourcemaps": "^1.9.1",
+    "gulp-sourcemaps": "^2.6.2",
     "imagemin-cli": "^3.0.0",
     "jinjs": "^0.3.6",
     "js-yaml": "^3.10.0",
@@ -65,15 +65,16 @@
     "replace": "^0.3.0",
     "rollup-plugin-commonjs": "^8.2.6",
     "rollup-plugin-node-resolve": "^3.0.0",
-    "rollupify": "^0.3.9",
-    "uglify-js": "^2.8.29",
+    "rollupify": "^0.4.0",
+    "uglify-js": "^3.3.3",
     "watchify": "^3.8.0"
   },
   "dependencies": {
     "@turf/bezier": "^3.7.0",
     "@turf/union": "^3.7.0",
+    "clean-css-cli": "^4.1.10",
     "dota-vision-simulation": "^0.16.0",
-    "ol": "^4.4.2",
+    "ol": "^4.6.4",
     "rollbar": "^2.3.1"
   }
 }
