use rollup for builds

--- a/package.json
+++ b/package.json
@@ -6,28 +6,28 @@
   "private": true,
   "scripts": {
     "postinstall": "npm run build",
-    "browserify": "node scripts/browserify.js",
-    "uglify": "node scripts/uglify.js",
-    "sass": "node-sass src/scss/app.scss www/app.css",
+    "render": "node scripts/render.js",
     "markdown:help": "marked src/help.md -o www/help.html",
     "preprocess:html": "npm run markdown:help && node scripts/preprocess.js",
-    "clean": "rm -rf dist/*",
-    "build:js": "npm run browserify -- production && npm run uglify",
-    "build:css": "npm run sass && cleancss www/app.css --skip-rebase -o dist/app-`git rev-parse --short HEAD`.min.css",
-    "build:html": "npm run render && npm run markdown:help && node scripts/preprocess.js -- production",
-    "build:copy": "cp -r www/img dist/img && cp -r www/data dist/data",
-    "build": "mkdir -p dist && npm run clean && npm run build:js && npm run build:css && npm run build:html && npm run build:copy",
-    "watch:js": "node scripts/browserify.js -- development watch",
-    "watch:css": "nodemon -e scss --watch src/scss -x \"npm run sass\"",
-    "watch:html": "nodemon -e html,md --watch src -x \"npm run preprocess:html\"",
-    "watch:j2": "nodemon -e j2 --watch src -x \"npm run render\"",
-    "watch": "npm run watch:js & npm run watch:css & npm run watch:j2 & npm run watch:html",
+    "build": "npm run build:js && npm run build:css && npm run build:html",
+    "build:js": "rollup -c --environment BUILD:development",
+    "build:css": "node-sass src/scss/app.scss www/app.css",
+    "build:html": "npm run render && preprocess:html",
+    "watch": "npm run watch:js & npm run watch:css & npm run watch:html",
+    "watch:js": "rollup -c -w --environment BUILD:development",
+    "watch:css": "nodemon -e scss --watch src/scss -x \"npm run build:css\"",
+    "watch:html": "nodemon -e j2,html,md --watch src -x \"npm run build:html\"",
+    "dist": "mkdir -p dist && npm run dist:clean && npm run dist:js && npm run dist:css && npm run dist:html && npm run dist:copy",
+    "dist:clean": "rm -rf dist/*",
+    "dist:js": "rollup -c --environment BUILD:production",
+    "dist:css": "npm build:css && cleancss www/app.css --skip-rebase -o dist/app-`git rev-parse --short HEAD`.min.css",
+    "dist:html": "npm run render && npm run markdown:help && node scripts/preprocess.js -- production",
+    "dist:copy": "cp -r www/img dist/img && cp -r www/data dist/data",
     "rollbar:sourcemap": "gulp rollbar:sourcemap",
     "rollbar:deploy": "node scripts/rollbar_deploy.js",
     "rollbar": "npm run rollbar:sourcemap && npm run rollbar:deploy -- production",
     "deploy": "node scripts/deploy.js",
-    "deploy:prod": "npm run deploy -- production && npm run rollbar",
-    "render": "node scripts/render.js"
+    "deploy:prod": "npm run deploy -- production && npm run rollbar"
   },
   "repository": {
     "type": "git",
@@ -63,8 +63,12 @@
     "nodemon": "^1.12.1",
     "preprocess": "^3.1.0",
     "replace": "^0.3.0",
-    "rollup-plugin-commonjs": "^8.2.6",
-    "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup": "^0.62.0",
+    "rollup-plugin-commonjs": "^8.4.1",
+    "rollup-plugin-json": "^3.0.0",
+    "rollup-plugin-node-resolve": "^3.3.0",
+    "rollup-plugin-replace": "^2.0.0",
+    "rollup-plugin-uglify": "^4.0.0",
     "rollupify": "^0.4.0",
     "uglify-js": "^3.3.3",
     "watchify": "^3.8.0"
