--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "npm run build:js && npm run build:css && npm run build:html",
     "build:js": "rollup -c --environment BUILD:development",
     "build:css": "node-sass src/scss/app.scss www/app.css",
-    "build:html": "npm run render && preprocess:html",
+    "build:html": "npm run render && npm run preprocess:html",
     "watch": "npm run watch:js & npm run watch:css & npm run watch:html",
     "watch:js": "rollup -c -w --environment BUILD:development",
     "watch:css": "nodemon -e scss --watch src/scss -x \"npm run build:css\"",
@@ -20,7 +20,7 @@
     "dist": "mkdir -p dist && npm run dist:clean && npm run dist:js && npm run dist:css && npm run dist:html && npm run dist:copy",
     "dist:clean": "rm -rf dist/*",
     "dist:js": "rollup -c --environment BUILD:production",
-    "dist:css": "npm build:css && cleancss www/app.css --skip-rebase -o dist/app-`git rev-parse --short HEAD`.min.css",
+    "dist:css": "npm run build:css && cleancss www/app.css --skip-rebase -o dist/app-`git rev-parse --short HEAD`.min.css",
     "dist:html": "npm run render && npm run markdown:help && node scripts/preprocess.js -- production",
     "dist:copy": "cp -r www/img dist/img && cp -r www/data dist/data",
     "rollbar:sourcemap": "gulp rollbar:sourcemap",
