--- a/package.json
+++ b/package.json
@@ -43,13 +43,8 @@
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
-    "babelify": "^8.0.0",
-    "browserify": "^14.5.0",
-    "browserify-replace": "^0.9.0",
-    "browserify-shim": "^3.8.12",
     "clean-css": "^4.1.9",
     "del": "^3.0.0",
-    "exorcist": "^1.0.0",
     "git-rev-sync": "^1.8.0",
     "glob": "^7.1.1",
     "gulp": "^3.9.1",
@@ -68,10 +63,7 @@
     "rollup-plugin-json": "^3.0.0",
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-replace": "^2.0.0",
-    "rollup-plugin-uglify": "^4.0.0",
-    "rollupify": "^0.4.0",
-    "uglify-js": "^3.3.3",
-    "watchify": "^3.8.0"
+    "rollup-plugin-uglify": "^4.0.0"
   },
   "dependencies": {
     "@turf/bezier": "^3.7.0",
