--- a/package.json
+++ b/package.json
@@ -62,13 +62,14 @@
     "rollup-plugin-json": "^3.0.0",
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-replace": "^2.0.0",
+    "rollup-plugin-terser": "^1.0.1",
     "rollup-plugin-uglify": "^4.0.0"
   },
   "dependencies": {
     "@turf/union": "^6.0.3",
     "clean-css-cli": "^4.1.10",
     "dota-vision-simulation": "^0.17.0",
-    "ol": "^5.0.0",
+    "ol": "^5.1.3",
     "rollbar": "^2.3.1"
   }
 }
