--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build:js": "rollup -c --environment BUILD:development",
     "build:css": "node-sass src/scss/app.scss www/app.css",
     "build:html": "npm run render && npm run preprocess:html",
-    "watch": "npm run watch:js & npm run watch:css & npm run watch:html",
+    "watch": "npm-run-all --parallel watch:*",
     "watch:js": "rollup -c -w --environment BUILD:development",
     "watch:css": "nodemon -e scss --watch src/scss -x \"npm run build:css\"",
     "watch:html": "nodemon -e j2,md --watch src -x \"npm run build:html\"",
@@ -56,6 +56,7 @@
     "marked": "^0.4.0",
     "node-sass": "^4.6.0",
     "nodemon": "^1.12.1",
+    "npm-run-all": "^4.1.3",
     "preprocess": "^3.1.0",
     "rollup": "^0.62.0",
     "rollup-plugin-commonjs": "^9.1.3",
