--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "render": "node scripts/render.js",
     "markdown:help": "marked src/template/help.md -o src/template/help.html",
     "preprocess:html": "npm run markdown:help && node scripts/preprocess.js",
+    "generatejson": "babel-node --presets es2015 src/js/generateGeoJSON.js",
     "build": "npm run build:js && npm run build:css && npm run build:html",
     "build:js": "rollup -c --environment BUILD:development",
     "build:css": "node-sass src/scss/app.scss www/app.css",
@@ -22,7 +23,7 @@
     "dist:js": "rollup -c --environment BUILD:production",
     "dist:css": "npm run build:css && cleancss www/app.css --skip-rebase -o dist/app-`git rev-parse --short HEAD`.min.css",
     "dist:html": "npm run render && npm run markdown:help && node scripts/preprocess.js -- production",
-    "dist:copy": "cp -r www/img dist/img && cp -r www/data dist/data",
+    "dist:copy": "cp -r www/img dist/img && cp -r www/data dist/data && cp www/*.php dist/ && mkdir -p dist/save",
     "rollbar:sourcemap": "gulp rollbar:sourcemap",
     "rollbar:deploy": "node scripts/rollbar_deploy.js",
     "rollbar": "npm run rollbar:sourcemap && npm run rollbar:deploy -- production",
@@ -58,7 +59,7 @@
     "nodemon": "^1.12.1",
     "npm-run-all": "^4.1.3",
     "preprocess": "^3.1.0",
-    "rollup": "^0.62.0",
+    "rollup": "^0.64.1",
     "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-json": "^3.0.0",
     "rollup-plugin-node-resolve": "^3.3.0",
@@ -67,10 +68,12 @@
     "rollup-plugin-uglify": "^4.0.0"
   },
   "dependencies": {
-    "@turf/union": "^6.0.3",
+    "@turf/union": "^5.1.5",
     "clean-css-cli": "^4.1.10",
     "dota-vision-simulation": "^0.17.0",
+    "file-saver": "^1.3.8",
     "ol": "^5.2.0",
+    "ol-rotate-feature": "^2.0.0",
     "rollbar": "^2.4.4"
   }
 }
