--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "www/tiles"]
-	path = www/tiles
+[submodule "assets/tiles"]
+	path = assets/tiles
 	url = git@github.com:devilesk/dota-map-tiles.git
