--- a/package.json
+++ b/package.json
@@ -5,30 +5,26 @@
   "main": "src/js/index.js",
   "private": true,
   "scripts": {
-    "postinstall": "npm run build",
     "render": "node scripts/render.js",
     "markdown:help": "marked src/template/help.md -o src/template/help.html",
     "preprocess:html": "npm run markdown:help && node scripts/preprocess.js",
     "generatejson": "babel-node --presets es2015 src/js/generateGeoJSON.js",
-    "build": "npm run build:js && npm run build:css && npm run build:html",
-    "build:js": "rollup -c --environment BUILD:development",
-    "build:css": "node-sass src/scss/app.scss www/app.css",
+    "build": "mkdir -p build && npm run build:js && npm run build:css && npm run build:html && npm run build:copy",
+    "build:js": "rollup -c",
+    "build:css": "node scripts/css.js",
     "build:html": "npm run render && npm run preprocess:html",
+    "build:copy": "cp -r assets/* build && mkdir -p build/save",
+    "build:clean": "rm -rf build",
     "watch": "npm-run-all --parallel watch:*",
-    "watch:js": "rollup -c -w --environment BUILD:development",
+    "watch:js": "rollup -c -w",
     "watch:css": "nodemon -e scss --watch src/scss -x \"npm run build:css\"",
     "watch:html": "nodemon -e j2,md --watch src -x \"npm run build:html\"",
-    "dist": "mkdir -p dist && npm run dist:clean && npm run dist:js && npm run dist:css && npm run dist:html && npm run dist:copy",
-    "dist:clean": "rm -rf dist/*",
-    "dist:js": "rollup -c --environment BUILD:production",
-    "dist:css": "npm run build:css && cleancss www/app.css --skip-rebase -o dist/app-`git rev-parse --short HEAD`.min.css",
-    "dist:html": "npm run render && npm run markdown:help && node scripts/preprocess.js -- production",
-    "dist:copy": "cp -r www/img dist/img && cp -r www/data dist/data && cp www/*.php dist/ && mkdir -p dist/save",
+    "dist": "npm run build:clean && NODE_ENV=production npm run build",
     "rollbar:sourcemap": "gulp rollbar:sourcemap",
     "rollbar:deploy": "node scripts/rollbar_deploy.js",
     "rollbar": "npm run rollbar:sourcemap && npm run rollbar:deploy -- production",
-    "deploy": "node scripts/deploy.js",
-    "deploy:prod": "npm run deploy -- production && npm run rollbar"
+    "deploy": "node scripts/deploy.js && npm run rollbar",
+    "gh-pages": "git subtree push --prefix build origin gh-pages"
   },
   "repository": {
     "type": "git",
@@ -41,11 +37,16 @@
   },
   "homepage": "https://github.com/devilesk/dota-interactive-map#readme",
   "devDependencies": {
+    "@turf/union": "^5.1.5",
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "clean-css": "^4.1.9",
+    "clean-css-cli": "^4.1.10",
     "del": "^3.0.0",
+    "dota-vision-simulation": "^0.17.0",
+    "dotenv": "^7.0.0",
+    "file-saver": "^1.3.8",
     "git-rev-sync": "^1.8.0",
     "glob": "^7.1.1",
     "gulp": "^3.9.1",
@@ -58,7 +59,10 @@
     "node-sass": "^4.6.0",
     "nodemon": "^1.12.1",
     "npm-run-all": "^4.1.3",
+    "ol": "^5.2.0",
+    "ol-rotate-feature": "^2.0.0",
     "preprocess": "^3.1.0",
+    "rollbar": "^2.4.4",
     "rollup": "^0.64.1",
     "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-json": "^3.0.0",
@@ -66,14 +70,5 @@
     "rollup-plugin-replace": "^2.0.0",
     "rollup-plugin-terser": "^1.0.1",
     "rollup-plugin-uglify": "^4.0.0"
-  },
-  "dependencies": {
-    "@turf/union": "^5.1.5",
-    "clean-css-cli": "^4.1.10",
-    "dota-vision-simulation": "^0.17.0",
-    "file-saver": "^1.3.8",
-    "ol": "^5.2.0",
-    "ol-rotate-feature": "^2.0.0",
-    "rollbar": "^2.4.4"
   }
 }
