--- a/package.json
+++ b/package.json
@@ -43,20 +43,17 @@
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "clean-css": "^4.1.9",
-    "clean-css-cli": "^4.1.10",
-    "del": "^3.0.0",
+    "del": "^4.1.1",
     "dota-vision-simulation": "^0.17.0",
     "dotenv": "^7.0.0",
     "file-saver": "^1.3.8",
     "git-rev-sync": "^1.8.0",
-    "glob": "^7.1.1",
     "gulp": "^3.9.1",
     "gulp-rollbar": "^0.1.4",
     "gulp-sourcemaps": "^2.6.2",
-    "imagemin-cli": "^3.0.0",
     "jinjs": "^0.3.6",
     "js-yaml": "^3.10.0",
-    "marked": "^0.4.0",
+    "marked": "^0.6.2",
     "node-sass": "^4.6.0",
     "nodemon": "^1.12.1",
     "npm-run-all": "^4.1.3",
@@ -64,12 +61,11 @@
     "ol-rotate-feature": "^2.0.0",
     "preprocess": "^3.1.0",
     "rollbar": "^2.4.4",
-    "rollup": "^0.64.1",
+    "rollup": "^1.10.1",
     "rollup-plugin-commonjs": "^9.1.3",
-    "rollup-plugin-json": "^3.0.0",
-    "rollup-plugin-node-resolve": "^3.3.0",
+    "rollup-plugin-json": "^4.0.0",
+    "rollup-plugin-node-resolve": "^4.2.3",
     "rollup-plugin-replace": "^2.0.0",
-    "rollup-plugin-terser": "^1.0.1",
-    "rollup-plugin-uglify": "^4.0.0"
+    "rollup-plugin-terser": "^4.0.4"
   }
 }
