refactor: transpile generateGeoJson script

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "render": "node scripts/render.js",
     "markdown:help": "marked src/template/help.md -o src/template/help.html",
     "preprocess:html": "npm run markdown:help && node scripts/preprocess.js",
-    "generatejson": "babel-node --presets es2015 src/js/generateGeoJSON.js",
+    "generatejson": "rollup -c rollup.config.scripts.js && node scripts/generateGeoJson.js",
     "build": "mkdir -p build && npm run build:js && npm run build:css && npm run build:html && npm run build:copy",
     "build:js": "rollup -c",
     "build:css": "node scripts/css.js",
@@ -38,10 +38,8 @@
   },
   "homepage": "https://github.com/devilesk/dota-interactive-map#readme",
   "devDependencies": {
+    "@babel/core": "^7.4.4",
     "@turf/union": "^5.1.5",
-    "babel-cli": "^6.26.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
     "clean-css": "^4.1.9",
     "del": "^4.1.1",
     "dota-vision-simulation": "^0.17.0",
@@ -62,6 +60,7 @@
     "preprocess": "^3.1.0",
     "rollbar": "^2.4.4",
     "rollup": "^1.10.1",
+    "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-resolve": "^4.2.3",
