--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
     "del": "^4.1.1",
     "dota-vision-simulation": "^0.17.0",
     "dotenv": "^7.0.0",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.17.2",
     "file-saver": "^1.3.8",
     "git-rev-sync": "^1.8.0",
     "gulp": "^3.9.1",
