--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     "@turf/union": "^5.1.5",
     "clean-css": "^4.1.9",
     "del": "^4.1.1",
-    "dota-vision-simulation": "^0.17.0",
     "dotenv": "^7.0.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
@@ -58,8 +57,6 @@
     "node-sass": "^4.6.0",
     "nodemon": "^1.12.1",
     "npm-run-all": "^4.1.3",
-    "ol": "^5.2.0",
-    "ol-rotate-feature": "^2.0.0",
     "preprocess": "^3.1.0",
     "rollbar": "^2.4.4",
     "rollup": "^1.10.1",
@@ -69,5 +66,10 @@
     "rollup-plugin-node-resolve": "^4.2.3",
     "rollup-plugin-replace": "^2.0.0",
     "rollup-plugin-terser": "^4.0.4"
+  },
+  "dependencies": {
+    "dota-vision-simulation": "^0.17.0",
+    "ol": "^5.2.0",
+    "ol-rotate-feature": "^2.0.0"
   }
 }
