--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "rollbar": "npm run rollbar:sourcemap && npm run rollbar:deploy -- production",
     "deploy": "node scripts/deploy.js && npm run rollbar",
     "gh-pages": "git subtree push --prefix build origin gh-pages",
-    "serve": "npx http-server build -p 3000"
+    "serve": "npx http-server build -p 3000",
+    "lint": "eslint src/js"
   },
   "repository": {
     "type": "git",
