--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=InteractiveMap
 MAP_DATA_PATH=tiles/
-VISION_DATA_IMAGE_PATH=img/map_data_721.png
+VISION_DATA_IMAGE_PATH=img/map_data_%MAP_VERSION%.png
 MAP_DATA_VERSION=721
 ENABLE_SAVE=false
 ENABLE_DOWNLOAD=false
