--- a/src/js/InteractiveMap/definitions/heroIconManifest.json
+++ b/src/js/InteractiveMap/definitions/heroIconManifest.json
@@ -39,6 +39,11 @@
     "x": 192,
     "y": 192
   },
+  "mars": {
+    "name": "Mars",
+    "x": 224,
+    "y": 352
+  },
   "mirana": {
     "name": "Mirana",
     "x": 256,
